fix: disabled-border color not showing

--- a/src/theme/base.css
+++ b/src/theme/base.css
@@ -19,6 +19,7 @@
   --color-text-light: var(--text-light);
   --color-disabled-primary: var(--disabled-primary);
   --color-disabled-secondary: var(--disabled-secondary);
+  --color-disabled-border: var(--disabled-border);
   --color-input-bg: var(--input-bg);
   --color-input-placeholder: var(--input-placeholder);
   --color-link: var(--link);
